dokonczylem implementacje wyszukiwania sciezek